fixed problem with overflow and gaps

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,12 +71,13 @@
   &-img {
     @include size(759px, 100%);
   }
-}
 
-.main-bold-text {
-  @include font-settings(65px, 70px);
-  max-width: 552px;
-  font-weight: 600;
+  &-bold-text {
+    @include font-settings(65px, 70px);
+    max-width: 552px;
+    font-weight: 600;
+    overflow-wrap: anywhere;
+  }
 }
 
 .bold-text {
@@ -129,7 +130,7 @@
 
 .middle-container {
   @include size($max-width-container, 100%);
-  gap: 250px;
+  gap: 14vw;
 }
 
 .underline-link {
@@ -161,7 +162,7 @@
 
 .block-items {
   align-items: center;
-  gap: 138px;
+  gap: 7vw;
 }
 
 .text-middle-container {
@@ -186,11 +187,13 @@
   &-container {
     @extend %container;
     gap: 75px;
+    text-align: center;
   }
 
   &-bold-text {
     @include font-settings(25px, 35px);
     font-weight: 600;
+    width: 100%;
   }
 
   &-text {
@@ -399,6 +402,7 @@
     @include font-settings(65px, 75px);
     font-weight: 600;
     max-width: 784px;
+    overflow-wrap: anywhere;
   }
 
   &-txt {
